# qr-encoder

./: Cargo.toml
src/: Encoder.rs  Mode.rs  bit_helpers.rs  capacities.rs  codes.rs  consts.rs  data.rs  encoding.rs  lib.rs  modes.rs  results.rs
tests/: modes.rs  t_bits.rs  t_caps.rs  t_encodings.rs  t_qr.rs
