[package]
name = "mything"
version = "0.0.1"
path = "src/main.rs"
authors = ["me <me@gmail.com>"]

[lib]
name = "qr_encoder"
version = "0.1.0"
edition = "2021"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"